<!--
  ~ Copyright 2016 . Anargyros Kiourkos.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~          http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">PiControl</string>
    <string name="outputs">Outputs</string>
    <string name="inputs">Inputs</string>
    <string name="edit_names">Edit names</string>
    <string name="event_log">Event Log</string>
    <string name="network_required_msg">Data Connection Required</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="unknown">Unknown</string>
    <string name="input_1">Input 1</string>
    <string name="input_2">Input 2</string>
    <string name="input_3">Input 3</string>
    <string name="input_4">Input 4</string>
    <string name="input_5">Input 5</string>
    <string name="input_6">Input 6</string>
    <string name="input_7">Input 7</string>
    <string name="input_8">Input 8</string>
    <string name="output_1">Output 1</string>
    <string name="output_2">Output 2</string>
    <string name="output_3">Output 3</string>
    <string name="output_4">Output 4</string>
    <string name="output_5">Output 5</string>
    <string name="output_6">Output 6</string>
    <string name="output_7">Output 7</string>
    <string name="output_8">Output 8</string>
    <string name="failed_to_update_inputs">Failed to update inputs</string>
    <string name="failed_to_update_outputs">Failed to update outputs</string>
    <string name="failed_to_send_control">Failed to send control</string>
    <string name="failed_to_set_name">Failed to update name</string>
    <string name="updated">Updated</string>
    <string name="saved">Saved</string>
    <string name="control_sent">Control sent</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="settings">Settings</string>
</resources>
