<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 . Anargyros Kiourkos.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~          http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outputs_swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- INPUT 0 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_0_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_blue" />

            <ToggleButton
                android:id="@+id/output_0_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_0_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_1" />

        </LinearLayout>

        <!-- INPUT 1 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_1_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_red" />

            <ToggleButton
                android:id="@+id/output_1_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_1_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_2" />

        </LinearLayout>

        <!-- OUTPUT 2 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_2_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_grey" />

            <ToggleButton
                android:id="@+id/output_2_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_2_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_3" />

        </LinearLayout>

        <!-- OUTPUT 3 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_3_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_blue" />

            <ToggleButton
                android:id="@+id/output_3_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_3_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_4" />

        </LinearLayout>

        <!-- OUTPUT 4 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_4_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_red" />

            <ToggleButton
                android:id="@+id/output_4_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_4_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_5" />

        </LinearLayout>

        <!-- OUTPUT 5 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_5_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_grey" />

            <ToggleButton
                android:id="@+id/output_5_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_5_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_6" />

        </LinearLayout>

        <!-- OUTPUT 6 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_6_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_blue" />

            <ToggleButton
                android:id="@+id/output_6_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_6_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_7" />

        </LinearLayout>

        <!-- OUTPUT 7 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/output_7_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_led_red" />

            <ToggleButton
                android:id="@+id/output_7_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/output_7_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/output_8" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>